Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1116

Potential infinite recursion detected by VC++14 compiler

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • proton-0.12.0
    • proton-0.12.0
    • cpp-binding
    • None
    • Visual Studio 2015 Update 1, Visual Studio 2010

    Description

      I get the following warning when running the Visual Studio 2015 compiler on the C++ binding code

      29>c:\users\andrew\documents\github\qpid-proton\proton-c\bindings\cpp\include\proton\value.hpp(49): warning C4717: 'proton::value::value<std::pair<std::basic_string<char,std::char_traits<char>,std::allocator<char> >,proton::value> >': recursive on all control paths, function will cause runtime stack overflow
      

      My guess is that we never actually try to run this code in the tests or e would indeed by seeing a failure, however I think we must eliminate this as a bug before releasing 0.12.

      Either remove the code so removing the warning (as the code seems like it can't have been called in testing) or fix the code.

      Attachments

        Activity

          People

            aconway Alan Conway
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: