PROTON-1116: Potential infinite recursion detected by VC++14 compiler

The problem is caused by the implicit conversion constructor in proton::value.
Made it explicit and fixed a few places that relied on it.

This is a simple fix for 0.12, a safer and more flexible encoding/decoding
system based on type-traits will be committed to master.